--- a/index.css
+++ b/index.css
@@ -82,7 +82,7 @@
     background-color: #1E54B0;
     color: white;
     font-weight: 500;
-    /* padding:10px 50px; */
+    padding:10px 50px;
     margin-top: 20px;
     display: inline-block;
     border-radius: 5px;
@@ -1188,6 +1188,19 @@ justify-content: space-around; */
     }
     .faq_heading{
         font-size: 18px !important;
+    }
+    .share_now{
+        background-color: #1E54B0;
+        color: white;
+        font-weight: 500;
+        padding:5px 50px;
+        margin-top: 20px;
+        display: inline-block;
+        border-radius: 5px;
+        border: 1px solid lightgray;
+        font-size: 12px;
+        cursor: pointer;
+        height: 42px;
     }
     .assistant_join_button{
         /* padding: 8px 0px; */
